// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 1`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "The user tucks in its head to raise its Defense stat on the first turn, then rams the target on the next turn.",
    "maxPP": 16,
    "moveId": 130,
    "movePath": "skull-bash",
    "name": "Skull Bash",
    "power": 130,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 2`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "The user attacks the target by scattering petals for two to three turns. The user then becomes confused.",
    "maxPP": 16,
    "moveId": 80,
    "movePath": "petal-dance",
    "name": "Petal Dance",
    "power": 120,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 3`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "A move that works differently for the Ghost type than for all other types.",
    "maxPP": 16,
    "moveId": 174,
    "movePath": "curse",
    "name": "Curse",
    "power": 0,
    "type": 7,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 4`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user lays roots that restore its HP on every turn. Because it’s rooted, it can’t switch out.",
    "maxPP": 32,
    "moveId": 275,
    "movePath": "ingrain",
    "name": "Ingrain",
    "power": 0,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 5`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "This attack makes use of nature’s power. Its effects vary depending on the user’s environment.",
    "maxPP": 32,
    "moveId": 267,
    "movePath": "nature-power",
    "name": "Nature Power",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 6`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 100,
    "damageType": 0,
    "desc": "The user gazes at the target rather charmingly, making it less wary. This harshly lowers the target’s Attack stat.",
    "maxPP": 32,
    "moveId": 204,
    "movePath": "charm",
    "name": "Charm",
    "power": 0,
    "type": 17,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 7`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 101,
    "damageType": 2,
    "desc": "The user scatters curious leaves that chase the target. This attack never misses.",
    "maxPP": 32,
    "moveId": 345,
    "movePath": "magical-leaf",
    "name": "Magical Leaf",
    "power": 60,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 8`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user temporarily empties its mind to forget its concerns. This sharply raises the user’s Sp. Def stat.",
    "maxPP": 32,
    "moveId": 133,
    "movePath": "amnesia",
    "name": "Amnesia",
    "power": 0,
    "type": 13,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 9`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 90,
    "damageType": 2,
    "desc": "The user whips up a storm of leaves around the target. The attack’s recoil harshly lowers the user’s Sp. Atk stat.",
    "maxPP": 8,
    "moveId": 437,
    "movePath": "leaf-storm",
    "name": "Leaf Storm",
    "power": 130,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 10`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 85,
    "damageType": 1,
    "desc": "The user violently whirls its vines, tentacles, or the like to harshly lash the target.",
    "maxPP": 16,
    "moveId": 438,
    "movePath": "power-whip",
    "name": "Power Whip",
    "power": 120,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 11`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "Unsanitary sludge is hurled at the target. This may also poison the target.",
    "maxPP": 24,
    "moveId": 124,
    "movePath": "sludge",
    "name": "Sludge",
    "power": 75,
    "type": 3,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 12`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user turns the ground to grass for five turns. This restores the HP of Pokémon on the ground a little every turn and powers up Grass-type moves.",
    "maxPP": 16,
    "moveId": 580,
    "movePath": "grassy-terrain",
    "name": "Grassy Terrain",
    "power": 0,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 13`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 55,
    "damageType": 0,
    "desc": "The user plays a pleasant melody that lulls the target into a deep sleep.",
    "maxPP": 24,
    "moveId": 320,
    "movePath": "grass-whistle",
    "name": "Grass Whistle",
    "power": 0,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getEggMoves returns an array of egg moves for a valid dexId 14`] = `
{
  "level": "egg",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "In this two-turn attack, blades of wind hit opposing Pokémon on the second turn. Critical hits land more easily.",
    "maxPP": 16,
    "moveId": 13,
    "movePath": "razor-wind",
    "name": "Razor Wind",
    "power": 80,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 1`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 90,
    "damageType": 0,
    "desc": "A move that leaves the target badly poisoned. Its poison damage worsens every turn.",
    "maxPP": 16,
    "moveId": 92,
    "movePath": "toxic",
    "name": "Toxic",
    "power": 0,
    "type": 3,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 2`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "The user forcefully shoots seeds at the target two to five times in a row.",
    "maxPP": 48,
    "moveId": 331,
    "movePath": "bullet-seed",
    "name": "Bullet Seed",
    "power": 25,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 3`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "A unique attack that varies in type depending on the Pokémon using it.",
    "maxPP": 24,
    "moveId": 237,
    "movePath": "hidden-power",
    "name": "Hidden Power",
    "power": 60,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 4`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user intensifies the sun for five turns, powering up Fire-type moves. It lowers the power of Water-type moves.",
    "maxPP": 8,
    "moveId": 241,
    "movePath": "sunny-day",
    "name": "Sunny Day",
    "power": 0,
    "type": 9,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 5`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "A wondrous wall of light is put up to reduce damage from special attacks for five turns.",
    "maxPP": 48,
    "moveId": 113,
    "movePath": "light-screen",
    "name": "Light Screen",
    "power": 0,
    "type": 13,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 6`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "This move enables the user to protect itself from all attacks. Its chance of failing rises if it is used in succession.",
    "maxPP": 16,
    "moveId": 182,
    "movePath": "protect",
    "name": "Protect",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 7`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "A nutrient-draining attack. The user’s HP is restored by half the damage taken by the target.",
    "maxPP": 16,
    "moveId": 202,
    "movePath": "giga-drain",
    "name": "Giga Drain",
    "power": 75,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 8`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user creates a protective field that prevents status conditions for five turns.",
    "maxPP": 40,
    "moveId": 219,
    "movePath": "safeguard",
    "name": "Safeguard",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 9`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "In this two-turn attack, the user gathers light, then blasts a bundled beam on the next turn.",
    "maxPP": 16,
    "moveId": 76,
    "movePath": "solar-beam",
    "name": "Solar Beam",
    "power": 120,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 10`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "By moving rapidly, the user makes illusory copies of itself to raise its evasiveness.",
    "maxPP": 24,
    "moveId": 104,
    "movePath": "double-team",
    "name": "Double Team",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 11`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "Unsanitary sludge is hurled at the target. This may also poison the target.",
    "maxPP": 16,
    "moveId": 188,
    "movePath": "sludge-bomb",
    "name": "Sludge Bomb",
    "power": 90,
    "type": 3,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 12`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "This attack move doubles its power if the user is poisoned, burned, or paralyzed.",
    "maxPP": 32,
    "moveId": 263,
    "movePath": "facade",
    "name": "Facade",
    "power": 70,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 13`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user goes to sleep for two turns. This fully restores the user’s HP and heals any status conditions.",
    "maxPP": 16,
    "moveId": 156,
    "movePath": "rest",
    "name": "Rest",
    "power": 0,
    "type": 13,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 14`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 0,
    "desc": "If it is the opposite gender of the user, the target becomes infatuated and less likely to attack.",
    "maxPP": 24,
    "moveId": 213,
    "movePath": "attract",
    "name": "Attract",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 15`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "The user draws power from nature and fires it at the target. This may also lower the target’s Sp. Def stat.",
    "maxPP": 16,
    "moveId": 412,
    "movePath": "energy-ball",
    "name": "Energy Ball",
    "power": 90,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 16`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "A restrained attack that prevents the target from fainting. The target is left with at least 1 HP.",
    "maxPP": 64,
    "moveId": 206,
    "movePath": "false-swipe",
    "name": "False Swipe",
    "power": 40,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 17`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user endures any attack with at least 1 HP. Its chance of failing rises if it is used in succession.",
    "maxPP": 16,
    "moveId": 203,
    "movePath": "endure",
    "name": "Endure",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 18`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 0,
    "desc": "The user flashes a light that lowers the target’s accuracy. It can also be used to illuminate caves.",
    "maxPP": 32,
    "moveId": 148,
    "movePath": "flash",
    "name": "Flash",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 19`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "A frenetic dance to uplift the fighting spirit. This sharply raises the user’s Attack stat.",
    "maxPP": 32,
    "moveId": 14,
    "movePath": "swords-dance",
    "name": "Swords Dance",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 20`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "While it is asleep, the user randomly uses one of the moves it knows.",
    "maxPP": 16,
    "moveId": 214,
    "movePath": "sleep-talk",
    "name": "Sleep Talk",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 21`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 2,
    "desc": "The user snares the target with grass and trips it. The heavier the target, the greater the move’s power.",
    "maxPP": 32,
    "moveId": 447,
    "movePath": "grass-knot",
    "name": "Grass Knot",
    "power": 1,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 22`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 85,
    "damageType": 0,
    "desc": "The user enrages and confuses the target. However, this also sharply raises the target’s Attack stat.",
    "maxPP": 24,
    "moveId": 207,
    "movePath": "swagger",
    "name": "Swagger",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 23`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user creates a substitute for itself using some of its HP. The substitute serves as the user’s decoy.",
    "maxPP": 16,
    "moveId": 164,
    "movePath": "substitute",
    "name": "Substitute",
    "power": 0,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 24`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "The target is cut with a scythe or claw. It’s also one of the Pokétch’s hidden moves.",
    "maxPP": 40,
    "moveId": 15,
    "movePath": "cut",
    "name": "Cut",
    "power": 60,
    "type": 11,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 25`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "The target is slugged with a punch thrown at maximum power. It’s also one of the Pokétch’s hidden moves.",
    "maxPP": 24,
    "moveId": 70,
    "movePath": "strength",
    "name": "Strength",
    "power": 100,
    "type": 0,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 26`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 100,
    "damageType": 1,
    "desc": "The user attacks with a punch that may lower the target’s Defense stat. It’s also one of the Pokétch’s hidden moves.",
    "maxPP": 24,
    "moveId": 249,
    "movePath": "rock-smash",
    "name": "Rock Smash",
    "power": 60,
    "type": 1,
  },
}
`;

exports[`Dex Utils Move Getters getTechMachineLearnset returns an array of TM moves when one or more TMs are learned 27`] = `
{
  "level": "tm",
  "move": {
    "accuracy": 101,
    "damageType": 0,
    "desc": "The user is roused, and its Attack and Sp. Atk stats increase.",
    "maxPP": 48,
    "moveId": 526,
    "movePath": "work-up",
    "name": "Work Up",
    "power": 0,
    "type": 0,
  },
}
`;
